# testCI

./: .appveyor.yml  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.rst  main.cpp  testCI.cpp  testCI.h
ci/appveyor/: install.bat  set-env.bat
ci/travis/: build.sh  install-linux.sh  install-osx.sh  set-env.sh
hello/: CMakeLists.txt  hello.cpp  hello.h
